# texnikum-backend

./: .gitignore  Dockerfile  alembic.ini  common.py  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 052c30803429_create_user.py  142ebe157b75_create_table.py  1a7c5f212175_create_user.py  2651e590997a_create_table.py  471b6d348ed8_create_user.py  582f1dee81fb_create_table.py  6ef5c6bdd0c4_create_user.py  7f8e86f21bba_create_user.py  851c30f24e42_create_user.py  8e36b7cdef51_list.py  d236a70ee4e1_create_user.py  df6dac97ae8d_create_table.py  f1833c39b854_create_table.py
backend/: depensies.py  main.py
backend/app/auth/: exseptions.py  router.py  service.py
backend/app/owner/: router.py  service.py
backend/app/owner/schema/: create.py
backend/app/upload/: router.py  servise.py
database/postgres/: database.py
database/postgres/models/: categories.py  deficiency.py  news.py  teacher.py  users.py
uploads/: 3b2151a6-fbf8-4d7e-ad4a-d9fa8c648c4a.docx  bb7ca2e5-a9eb-4d02-93c4-e05faf4646f7.html
